# Look4LTRs

./: CMakeLists.txt  LICENSE  README.md
SupplementaryMaterial/RTR/Glycine_max/: Glycine_max_chr1.rtr  Glycine_max_chr10.rtr  Glycine_max_chr11.rtr  Glycine_max_chr12.rtr  Glycine_max_chr13.rtr  Glycine_max_chr14.rtr  Glycine_max_chr15.rtr  Glycine_max_chr16.rtr  Glycine_max_chr17.rtr  Glycine_max_chr18.rtr  Glycine_max_chr19.rtr  Glycine_max_chr2.rtr  Glycine_max_chr20.rtr  Glycine_max_chr3.rtr  Glycine_max_chr4.rtr  Glycine_max_chr5.rtr  Glycine_max_chr6.rtr  Glycine_max_chr7.rtr  Glycine_max_chr8.rtr  Glycine_max_chr9.rtr
SupplementaryMaterial/RTR/Oryza_glabberima_CS/: Oryza_glaberrima_chr1.rtr  Oryza_glaberrima_chr10.rtr  Oryza_glaberrima_chr11.rtr  Oryza_glaberrima_chr12.rtr  Oryza_glaberrima_chr2.rtr  Oryza_glaberrima_chr3.rtr  Oryza_glaberrima_chr4.rtr  Oryza_glaberrima_chr5.rtr  Oryza_glaberrima_chr6.rtr  Oryza_glaberrima_chr7.rtr  Oryza_glaberrima_chr8.rtr  Oryza_glaberrima_chr9.rtr
SupplementaryMaterial/RTR/Oryza_glabberima_SS/: Oryza_glaberrima_chr1.rtr  Oryza_glaberrima_chr10.rtr  Oryza_glaberrima_chr11.rtr  Oryza_glaberrima_chr12.rtr  Oryza_glaberrima_chr2.rtr  Oryza_glaberrima_chr3.rtr  Oryza_glaberrima_chr4.rtr  Oryza_glaberrima_chr5.rtr  Oryza_glaberrima_chr6.rtr  Oryza_glaberrima_chr7.rtr  Oryza_glaberrima_chr8.rtr  Oryza_glaberrima_chr9.rtr
SupplementaryMaterial/RTR/Oryza_indica_CS/: Oryza_indica_chr1.rtr  Oryza_indica_chr10.rtr  Oryza_indica_chr11.rtr  Oryza_indica_chr12.rtr  Oryza_indica_chr2.rtr  Oryza_indica_chr3.rtr  Oryza_indica_chr4.rtr  Oryza_indica_chr5.rtr  Oryza_indica_chr6.rtr  Oryza_indica_chr7.rtr  Oryza_indica_chr8.rtr  Oryza_indica_chr9.rtr
SupplementaryMaterial/RTR/Oryza_indica_SS/: Oryza_indica_chr1.rtr  Oryza_indica_chr10.rtr  Oryza_indica_chr11.rtr  Oryza_indica_chr12.rtr  Oryza_indica_chr2.rtr  Oryza_indica_chr3.rtr  Oryza_indica_chr4.rtr  Oryza_indica_chr5.rtr  Oryza_indica_chr6.rtr  Oryza_indica_chr7.rtr  Oryza_indica_chr8.rtr  Oryza_indica_chr9.rtr
SupplementaryMaterial/RTR/Oryza_longistaminata_CS/: Oryza_longistaminata_chr1.rtr  Oryza_longistaminata_chr10.rtr  Oryza_longistaminata_chr11.rtr  Oryza_longistaminata_chr12.rtr  Oryza_longistaminata_chr2.rtr  Oryza_longistaminata_chr3.rtr  Oryza_longistaminata_chr4.rtr  Oryza_longistaminata_chr5.rtr  Oryza_longistaminata_chr6.rtr  Oryza_longistaminata_chr7.rtr  Oryza_longistaminata_chr8.rtr  Oryza_longistaminata_chr9.rtr
SupplementaryMaterial/RTR/Oryza_longistaminata_SS/: Oryza_longistaminata_chr1.rtr  Oryza_longistaminata_chr10.rtr  Oryza_longistaminata_chr11.rtr  Oryza_longistaminata_chr12.rtr  Oryza_longistaminata_chr2.rtr  Oryza_longistaminata_chr3.rtr  Oryza_longistaminata_chr4.rtr  Oryza_longistaminata_chr5.rtr  Oryza_longistaminata_chr6.rtr  Oryza_longistaminata_chr7.rtr  Oryza_longistaminata_chr8.rtr  Oryza_longistaminata_chr9.rtr
SupplementaryMaterial/RTR/Oryza_rufipogon_CS/: Oryza_rufipogon_chr1.rtr  Oryza_rufipogon_chr10.rtr  Oryza_rufipogon_chr11.rtr  Oryza_rufipogon_chr12.rtr  Oryza_rufipogon_chr2.rtr  Oryza_rufipogon_chr3.rtr  Oryza_rufipogon_chr4.rtr  Oryza_rufipogon_chr5.rtr  Oryza_rufipogon_chr6.rtr  Oryza_rufipogon_chr7.rtr  Oryza_rufipogon_chr8.rtr  Oryza_rufipogon_chr9.rtr
SupplementaryMaterial/RTR/Oryza_rufipogon_SS/: Oryza_rufipogon_chr1.rtr  Oryza_rufipogon_chr10.rtr  Oryza_rufipogon_chr11.rtr  Oryza_rufipogon_chr12.rtr  Oryza_rufipogon_chr2.rtr  Oryza_rufipogon_chr3.rtr  Oryza_rufipogon_chr4.rtr  Oryza_rufipogon_chr5.rtr  Oryza_rufipogon_chr6.rtr  Oryza_rufipogon_chr7.rtr  Oryza_rufipogon_chr8.rtr  Oryza_rufipogon_chr9.rtr
SupplementaryMaterial/RTR/Oryza_sativa_CS/: Oryza_sativa_chr1.rtr  Oryza_sativa_chr10.rtr  Oryza_sativa_chr11.rtr  Oryza_sativa_chr12.rtr  (+8 more)
Training/: detectorTrainer.py  generateSemiSynthetic.py  graphStatistics.py  label.py  requirements.txt  trainModel.py
rtr/: findSameGraphNest.py
scripts/: findRT.py  findRecentNest.py  findSameGraphNest.py
src/: Aligner.cpp  Aligner.h  AlignerParallel.cpp  AlignerParallel.h  BestFirst.cpp  BestFirst.h  DataGenerator.cpp  DataGenerator.h  Evaluator.cpp  Evaluator.h  FastaReader.cpp  FastaReader.h  Feature.cpp  Feature.h  FeatureExpander.cpp  FeatureExpander.h  FeaturePaired.cpp  FeaturePaired.h  FeatureSquared.cpp  FeatureSquared.h  GLM.cpp  GLM.h  GLMClassifier.cpp  GLMClassifier.h  GLMPredictor.cpp  GLMPredictor.h  GLMRegressor.cpp  GLMRegressor.h  GlobAlignE.cpp  GlobAlignE.h  ITransformer.cpp  ITransformer.h  Identity.cpp  IdentityCalculator.cpp  IdentityCalculator.h  IdentityCalculator1.cpp  IdentityCalculator1.h  KmerHistogram.cpp  KmerHistogram.h  LockFreeQueue.cpp  (+24 more)
src/apps/: ClustEval.cpp  ClustEvalAlignment.cpp  GenerateClusters.cpp  IdentityClustEval.cpp  MakeClusters.cpp
src/ltr/: CaseMainTestDrive.cpp  CaseMatcher.cpp  CaseMatcher.h  CaseRecent.cpp  CaseRecent.h  CaseRecentComplex.cpp  CaseRecentComplex.h  CaseSingle.cpp  CaseSingle.h  CaseSolo.cpp  CaseSolo.h  DeepNesting.cpp  DeepNesting.fwd.h  DeepNesting.h  Detector.cpp  Detector.h  DetectorTestDrive.cpp  DirectedGraph.cpp  DirectedGraph.h  DirectedGraphTestDrive.cpp  Element.cpp  Element.h  FastaReaderTestDrive.cpp  Filter.cpp  Filter.h  FilterTestDrive.cpp  GenerateStretchDrive.cpp  LTR.cpp  LocalAlignment.cpp  LocalAlignment.h  LtrParameters.cpp  LtrParameters.h  LtrUtility.cpp  LtrUtility.h  MainTestDrive.cpp  Matcher.cpp  Matcher.h  MatcherTestDrive.cpp  Merger.cpp  Merger.h  (+42 more)
src/meshclust/: Cluster.cpp  Cluster.h  GMM.cpp  GMM.h  MeShClust.cpp  MeanShift.cpp  MeanShiftLarge.cpp  MeanShiftLarge.h
src/msl/: MslToMatrix.cpp
src/nonltr/: ChromosomeOneDigit.cpp  EnrichmentMarkovView.cpp  KmerHashTable.cpp  KmerHashTable.h  Scanner.cpp  Scorer.cpp  Scorer.h
src/red/: Red.cpp  Red.h  RedTestDrive.cpp
src/test/: CallExecutable.cpp  IdentityTestCase.cpp  MITEChecker.ipynb  MedianTest.cpp  PPTChecker.ipynb  ReadFile  ReadFile.cpp  SmartPointer  SmartPointer.cpp  Test.cpp  Test2.cpp  TestFastaReader.cpp  chromosometest.cpp  globAlign.py  testLocAlign.cpp  testReverseComplement.cpp
src/utility/: LocAlign.cpp  LocAlign.h
(+76 files in other folders)
